# oxeye

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/intone-cli/src/: lib.rs  main.rs
crates/intone-core/src/: settings.rs
crates/intone-linux/src/: lib.rs
crates/intone-macos/src/: ax.rs  speech.rs
crates/intone-windows/src/: uia.rs
crates/oxeye-cli/: Cargo.toml
crates/oxeye-cli/src/: lib.rs  main.rs
crates/oxeye-core/src/: announcement.rs  exclusions.rs  navigation.rs  settings.rs
crates/oxeye-linux/: Cargo.toml
crates/oxeye-linux/src/: lib.rs  main.rs
crates/oxeye-macos/: Cargo.toml
crates/oxeye-macos/src/: ax.rs  lib.rs  main.rs  speech.rs
crates/oxeye-windows/: Cargo.toml
crates/oxeye-windows/src/: uia.rs
docs/: voices.md
