# Workspace manifest. Reusable core + per-platform back-ends (added later).
[workspace]
# resolver 3 is MSRV-aware: it selects dependency versions compatible with `rust-version`
# below, so the project builds on the distro toolchain (Debian 13 / Parrot ships rustc 1.85)
# without forcing contributors onto rustup or pinning deps by hand.
resolver = "3"
members = [
    "crates/oxeye-core",
    "crates/oxeye-cli",
    "crates/oxeye-linux",
    "crates/oxeye-windows",
    "crates/oxeye-macos",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["The oxeye Authors"]
description = "A free, cross-platform, privacy-respecting screen reader."

# Security/quality posture enforced workspace-wide (per the SSDLC ruleset).
[workspace.lints.rust]
unsafe_code = "forbid"        # memory safety: no unsafe in the core
missing_docs = "warn"         # docs mandate; CI runs with -D warnings -> hard fail
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# `pedantic`/`nursery` can be enabled once the codebase grows; kept off so CI stays green early.

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"            # linear-time engine -> ReDoS-safe for user-supplied rules
thiserror = "2"
directories = "5"      # XDG base dirs
tracing = "0.1"
clap = { version = "4", features = ["derive"] }   # CLI arg parsing (config/exclusions mgmt)
anyhow = "1"           # ergonomic error context at binary boundaries
zeroize = { version = "1", features = ["derive"] }
