[package]
name = "oxeye-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Linux (AT-SPI2 + speech-dispatcher) back-end and Phase-0 spike for the oxeye screen reader."

[lints]
workspace = true

[dependencies]
oxeye-core = { path = "../oxeye-core", version = "0.0.0" }
atspi = { version = "0.30", features = ["tokio"] }
ssip-client-async = { version = "0.19", features = ["tokio"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
futures-lite = "2"
anyhow = "1"
tracing.workspace = true
tracing-subscriber = "0.3"
