[package]
name = "oxeye-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "macOS (Accessibility / AXAPI) back-end for the oxeye screen reader."

# Does NOT inherit the workspace `unsafe_code = "forbid"`: the macOS Accessibility API is a C/FFI
# boundary requiring `unsafe`, isolated to the `ax` adapter; `oxeye-core` stays unsafe-free. Every
# `unsafe` block must carry a `// SAFETY:` justification — enforced by `undocumented_unsafe_blocks`
# (denied in CI via `-D warnings`).
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

[dependencies]
oxeye-core = { path = "../oxeye-core", version = "0.1.0" }
anyhow = { workspace = true }
tracing = { workspace = true }

# macOS-only: target-gated so they are not pulled into the Linux/Windows builds.
[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1"
core-foundation = "0.10"
core-foundation-sys = "0.8" # `CFTypeRef` matching accessibility-sys' FFI signatures
