[package]
name = "oxeye-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Windows (UI Automation) back-end for the oxeye screen reader."

# This crate does NOT inherit the workspace `unsafe_code = "forbid"` lint: COM/UIA/SAPI/Win32 are
# FFI boundaries that require `unsafe`. It is isolated to the `uia` adapter; the reusable
# `oxeye-core` crate stays unsafe-free. `unsafe` is allowed, but every `unsafe` block MUST carry a
# `// SAFETY:` justification — enforced by clippy's `undocumented_unsafe_blocks` (denied in CI via
# `-D warnings`). The rest of the workspace lints are mirrored.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

[dependencies]
oxeye-core = { path = "../oxeye-core", version = "0.1.0" }
anyhow = { workspace = true }
tracing = { workspace = true }

# Windows-only: target-gated so it is not pulled into the Linux build/CI.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement", # COM interface implementation (the focus-changed event sink)
    "Win32_Foundation",
    "Win32_Media_Speech",                # SAPI ISpVoice (speech output)
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",   # RegisterHotKey (by-type navigation)
    "Win32_UI_WindowsAndMessaging",      # message loop (WM_HOTKEY), GetForegroundWindow
] }
# Direct dep so the `#[implement]` macro's generated `windows_core::…` paths resolve.
windows-core = "0.58"
